tests/neg/i7816.scala
object A {
    def f()(>) = ???     // error
    import f.NonExistent // error
}